<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">
    
    <TextView android:id="@+id/taskDetails"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/taskDetails"
        android:textSize="20sp" > 
    </TextView>
    
    <EditText android:id="@+id/taskName"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center" 
        android:textSize="18sp"
        android:hint="@string/hintTaskName">
    </EditText>
    
     <EditText android:id="@+id/taskDescription"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content" 
        android:layout_gravity="center" 
        android:textSize="18sp"
        android:hint="@string/hintTaskDescription"
        android:inputType="textMultiLine"
        android:lines="2"
        android:maxLines="4">
    </EditText>
    
    <TextView android:id="@+id/taskPriority"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:text="@string/taskPriority"
        android:textSize="20sp" > 
    </TextView>
    
    <RadioGroup android:id="@+id/radioTaskPriority"
        android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <RadioButton android:id="@+id/radioTaskHigh"
            android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:checked="false"
        	android:text="@string/taskHighPriority">
        </RadioButton>
        
        <RadioButton android:id="@+id/radioTaskLow"
            android:layout_width="wrap_content" 
        	android:layout_height="wrap_content"
        	android:checked="false"
        	android:text="@string/taskLowPriority">
        </RadioButton>
        
    </RadioGroup>
    
    <Button android:id="@+id/saveTask"
    	android:layout_width="wrap_content" 
        android:layout_height="wrap_content"
        android:text="@string/saveTask">
    </Button>

</LinearLayout>